# open-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_agent_instructions.py
app/: __init__.py
app/agents/: orchestrator.py  state.py  tool_loop.py
app/api/: dependencies.py  main.py
app/api/routes/: telegram.py
app/application/: audit_service.py  confirmation_service.py  employee_service.py  entity_service.py  file_service.py  instruction_service.py  memory_service.py  nl_task_parser.py  permissions.py  schemas.py  task_service.py
app/bot/: __init__.py  polling.py  telegram_service.py
app/core/: config.py
app/domain/: __init__.py  enums.py
app/infrastructure/: idempotency.py  llm.py
app/infrastructure/db/: models.py  session.py
app/rag/: __init__.py  service.py
app/scheduler/: main.py
app/tools/: __init__.py  defaults.py  registry.py  schemas.py
app/workers/: tasks.py
docs/: ARCHITECTURE.md  STATUS.md
scripts/: bootstrap_admin.py  seed_admin.py  seed_agent_instructions.py
tests/api/: test_health.py
tests/application/: test_nl_task_parser.py  test_permissions.py
tests/infrastructure/: test_llm_client.py
tests/tools/: test_registry.py
