[project]
name = "openagentcrm"
version = "0.1.0"
description = "Local AI Agent CRM for Telegram with typed tools, audit, RAG and safe operations."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4,<4",
    "alembic>=1.13,<2",
    "apscheduler>=3.10,<4",
    "asyncpg>=0.29,<1",
    "dramatiq[redis]>=1.17,<2",
    "fastapi>=0.111,<1",
    "httpx>=0.27,<1",
    "langgraph>=0.2,<1",
    "minio>=7.2,<8",
    "openai>=1.40,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "qdrant-client>=1.10,<2",
    "redis>=5,<6",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "coverage>=7.5,<8",
    "mypy>=1.10,<2",
    "polyfactory>=2.16,<3",
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
    "testcontainers>=4.7,<5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 75
